# stock-filter

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  Makefile  app.py  docker-compose.yml  fake_api.py  filters.py  main.py  pyproject.toml  requirements.txt  workflow.md
.claude/: CLAUDE.md  settings.json
.claude/commands/: add-commit-push.md  commit-push.md  commit.md
.claude/hooks/: notify.py
.claude/skills/: optimize-rate-limit.md
.github/workflows/: deploy.yml
backend/: crawl.py  logger.py  main.py  requirements.txt
backend/app/: main.py
backend/app/config/: settings.py
backend/app/usecases/: run_stock_screener.py
backend/application/dto/: chat_dto.py  stock_dto.py
backend/application/mappers/: market_regime_mapper.py  stock_mapper.py
backend/application/services/: crawl_service.py  stock_filter.py
backend/application/use_case/: chat_use_case.py  get_stock.py  layer1_use_case.py  layer2_use_case.py
backend/crawler/: crawler.py  db_writer.py  mcp_server.py  state.py  test_crawler.py
backend/db/: connection.py
backend/db/migrations/: 001.create_stocks.sql  001_create_stocks.sql  (+5 more)
backend/infrastructure/: container.py  db_stock_repository_impl.py  stock_repository_impl.py
backend/utils/: layer2.py  layer2_test.py
docs/: api_docs.md  clean_architecture.md  company.md  deploy.md  features.md  filter.md  folder_structure.md  schema.sql  setup.md  user-diagram.md  vnstock.md
frontend/: app.py  fake_api.py  filters.py  requirements.txt
frontend/app_pages/: chat.py  layer1.py  layer2.py  watchlist.py
(+49 files in other folders)
