[project]
name = "stock-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "asyncpg>=0.31.0",
    "claude-agent-sdk>=0.1.56",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "fastmcp>=3.2.0",
    "google-genai>=1.70.0",
    "openai-agents>=0.13.5",
    "pandas>=3.0.2",
    "streamlit>=1.56.0",
]
